fix: update footer background color and card-info styling for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -317,7 +317,7 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.832);
+    background-color:transparent;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -326,7 +326,7 @@ footer {
 }
 .card-info{
     border-radius: 1rem;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(42, 42, 42, 0.641);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
